# Wind

./: README.md  pyproject.toml  requirements.txt
paper/: ress_paper.tex
scripts/: smarteole_lambda_sweep.py
src/wind_oracle/: __init__.py  cost.py  metrics.py  oracle.py  smarteole.py
