[tool.poetry]
name = "wind_oracle"
version = "0.1.0"
description = "Wind Turbine Stability-Penalty Oracle Research"
authors = ["K. Sarikaya <email@example.com>"]
keywords = ["wind turbine", "oracle", "stability", "penalty"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backends.pdb"